# checkmate-elite

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: Router.tsx
src/components/chess/: ChessBoardView.tsx  ChessClock.tsx  GameEndModal.tsx  GameModals.tsx  MoveList.tsx  gameHooks.ts
src/components/layout/: AppShell.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Tabs.tsx
src/data/: content.ts
src/engine/: stockfishEngine.ts
src/features/analytics/: AnalyticsPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/leaderboard/: LeaderboardPage.tsx
src/features/play/: LiveGamePage.tsx  PlayLobbyPage.tsx
src/features/profile/: ProfilePage.tsx
src/features/settings/: SettingsPage.tsx
src/features/tournaments/: TournamentsPage.tsx
src/lib/: chess.ts  constants.ts  elo.ts  ratingHistory.ts  sounds.ts  utils.ts
src/services/api/: index.ts
src/services/persistence/: index.ts
src/stores/: gameStore.ts  lobbyStore.ts  profileStore.ts  settingsStore.ts
src/styles/: index.css
src/types/: index.ts
