[package]
name = "checkmate-elite"
version = "0.1.0"
description = "Checkmate Elite - Professional Desktop Chess"
authors = ["Moham"]
edition = "2021"

[lib]
name = "checkmate_elite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
